--- a/velomall/style/scss/_header.scss
+++ b/velomall/style/scss/_header.scss
@@ -232,6 +232,14 @@
         cursor: pointer;
         flex-grow: 1;
         transition: $transition;
+        > a {
+          display: flex;
+          height: 100%;
+          width: 100%;
+          position: absolute;
+          top: 0;
+          left: 0;
+        }
         &:not(:last-child) {
           margin: 0 1px 0 0;
         }
