--- a/velomall/style/scss/_footer.scss
+++ b/velomall/style/scss/_footer.scss
@@ -36,8 +36,13 @@
         flex-wrap: wrap;
         > a {
           margin: 0 15px 10px 0;
+          transition: $transition;
+          &:hover {
+            transform: scale(1.2);
+          }
           > i {
-            font-size: 1.5em;
+            font-size: 2em;
+            color: rgb(0,192,255);
           }
         }
       }
@@ -52,6 +57,11 @@
           border-radius: 3px;
           overflow: hidden;
           margin: 0 15px 10px 0;
+          cursor: pointer;
+          transition: $transition;
+          &:hover {
+            transform: scale(1.5);
+          }
         }
       }
     }
@@ -75,8 +85,10 @@
           font-family: $f300;
           font-size: 1em;
           margin: 0 0 10px 0;
+          transition: $transition;
           &:hover {
             text-decoration: underline;
+            transform: scale(1.2);
           }
         }
       }
@@ -119,7 +131,18 @@
         display: flex;
         justify-content: center;
         > a {
+          height: 40px;
+          width: 40px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
           margin: 0 10px 0 10px;
+          border-radius: 5px;
+          overflow: hidden;
+          transition: $transition;
+          &:hover {
+            transform: scale(1.5);
+          }
         }
       }
     }
@@ -152,6 +175,57 @@
         overflow: hidden;
         font-family: $f100;
         font-size: 1em;
+      }
+      > .form-checkbox {
+        display: flex;
+        justify-content: center;;
+        align-items: center;
+        width: 100%;
+        margin: 10px 0 10px 0;
+        > input[type=checkbox]:checked ~.decoration > label {
+          background: rgb(0,192,255);
+          background: linear-gradient(to bottom,  rgba(0,192,255,1) 0%,rgba(0,127,197,1) 100%);
+          filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00c0ff', endColorstr='#007fc5',GradientType=0 );
+        }
+        > .decoration {
+          height: 15px;
+          min-height: 15px;
+          width: 15px;
+          min-width: 15px;
+          border-radius: 50%;
+          cursor: pointer;
+          border: 1px solid grey;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          margin: 0 10px 0 0;
+          > label {
+            display: flex;
+            height: 100%;
+            min-height: 100%;
+            width: 100%;
+            min-width: 100%;
+            border-radius: 50%;
+            border: 3px solid white;
+            background-color: white;
+            cursor: pointer;
+          }
+        }
+        > .text {
+          > p {
+            font-family: $f100;
+            font-size: 0.8em;
+            > label {
+              cursor: pointer;
+            }
+          }
+          > a {
+            font-family: $f100;
+            font-size: 0.8em;
+            text-decoration: underline;
+            display: block;
+          }
+        }
       }
       > button {
         margin: 20px 0 0 0;
