--- a/velomall/style/scss/_products.scss
+++ b/velomall/style/scss/_products.scss
@@ -23,6 +23,7 @@
     > .bunner {
       height: 100%;
       width: 100%;
+      max-width: 825px;
       border-radius: 5px;
       overflow: hidden;
       display: flex;
@@ -455,6 +456,9 @@
             > p {
               font-family: $f100;
               font-size: 0.8em;
+              > label {
+                cursor: pointer;
+              }
             }
             > a {
               font-family: $f100;
@@ -482,7 +486,474 @@
     > .products-content {
       width: 100%;
       max-width: 825px;
-      background-color: silver;
+      > .search-tags {
+        display: flex;
+        justify-content: flex-start;
+        flex-wrap: wrap;
+        > .tag {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          height: 30px;
+          min-height: 30px;
+          padding: 0 20px 0 20px;
+          border-radius: 15px;
+          border: 2px solid #00c0ff;
+          background-color: white;
+          font-family: $f300;
+          font-size: 1em;
+          margin: 10px 10px 0 0;
+
+          cursor: pointer;
+        }
+        > .active {
+          border: none;
+          color: white;
+          font-family: $f900;
+          font-size: 1em;
+          background: rgb(0,192,255);
+          background: linear-gradient(to bottom,  rgba(0,192,255,1) 0%,rgba(0,127,197,1) 100%);
+          filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00c0ff', endColorstr='#007fc5',GradientType=0 );
+          &:hover {
+            background: rgb(0,80,136);
+            background: linear-gradient(to bottom,  rgba(0,80,136,1) 0%,rgba(0,62,98,1) 100%);
+            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#005088', endColorstr='#003e62',GradientType=0 );
+          }
+        }
+        > .show-all {
+          display: flex;
+          justify-content: center;
+          align-items: flex-end;
+          border-bottom: 1px solid grey;
+          cursor: pointer;
+          margin: 0 0 5px 0;
+          > i {
+            font-size: 0.8em;
+            margin: 0 0 1px 3px;
+          }
+        }
+      }
+      > .search-direction {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        > input[type=checkbox]:checked ~.option > .chevron > i {
+          transform: rotate(180deg);
+        }
+        > .option {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          height: 45px;
+          min-height: 45px;
+          width: 100%;
+          max-width: 255px;
+          margin: 5px 0 5px 0;
+          background-color: white;
+          box-shadow: $shadow;
+          border-radius: 3px;
+          cursor: pointer;
+          transition: $transition;
+          > .decoration {
+            height: 100%;
+            width: 6px;
+            border-radius: 3px;
+          }
+          > .info {
+            font-family: $f700;
+            font-size: 1em;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            padding: 0 0 0 10px;
+            cursor: pointer;
+          }
+          > .chevron {
+              height: 100%;
+              display: flex;
+              align-items: center;
+              cursor: pointer;
+            > i {
+              padding: 0 10px 0 10px;
+              font-size: 1em;
+              transition: $transition;
+            }
+          }
+        }
+        > .available {
+          display: flex;
+          justify-content: flex-start;
+          align-items: center;
+          margin: 5px 25px 5px 0;
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          > input[type=checkbox]:checked ~.decoration > label {
+            background: rgb(0,192,255);
+            background: linear-gradient(to bottom,  rgba(0,192,255,1) 0%,rgba(0,127,197,1) 100%);
+            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00c0ff', endColorstr='#007fc5',GradientType=0 );
+          }
+          > .text {
+            padding: 0 0 0 20px;
+            width: 100%;
+            cursor: pointer;
+          }
+          > .decoration {
+            height: 25px;
+            min-height: 25px;
+            width: 25px;
+            min-width: 25px;
+            border: 1px solid grey;
+            border-radius: 3px;
+            cursor: pointer;
+            margin: 0 0 0 20px;
+            > label {
+              height: 100%;
+              width: 100%;
+              display: flex;
+              border: 6px solid white;
+              background-color: white;
+              cursor: pointer;
+              &:hover {
+                box-shadow: inset 0 0 1px 1px grey;
+              }
+            }
+          }
+        }
+      }
+      > .search-cards {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        > .card {
+          margin: 10px 0 10px 0;
+          height: auto;
+          width: 100%;
+          max-width: 265px;
+          padding: 10px 0 10px 0;
+          position: relative;
+          display: flex;
+          flex-direction: column;
+          transition: $transition;
+          border: 1px solid #dbdbdb;
+          border-radius: 5px;
+          z-index: 5;
+          background-color: white;
+          &:hover {
+            transform: scale(1.05);
+          }
+          &:hover > .additional {display: flex;}
+          > .image-contain {
+            position: relative;
+            height: 250px;
+            width: 100%;
+            background-color: white;
+            > .hover {
+              position: absolute;
+              top: 20px;
+              left: 0;
+              display: flex;
+              justify-content: space-between;
+              height: 35px;
+              width: 100%;
+              > .left {
+                width: 70px;
+                background: rgb(0,192,255);
+                background: linear-gradient(to bottom,  rgba(0,192,255,1) 0%,rgba(0,127,197,1) 100%);
+                filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00c0ff', endColorstr='#007fc5',GradientType=0 );
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                color: white;
+                font-family: $f700;
+                font-size: 1em;
+                -webkit-clip-path: polygon(0% 0%, 100% 0, 90% 50%, 100% 100%, 0% 100%);
+                        clip-path: polygon(0% 0%, 100% 0, 90% 50%, 100% 100%, 0% 100%);
+              }
+              > .right {
+                display: flex;
+                justify-content: flex-end;
+                padding: 0 10px 0 0;
+                > .image-contain {
+                  height: 100%;
+                  width: 25px;
+                  margin: 0 5px 0 5px;
+                  cursor: pointer;
+                }
+              }
+            }
+          }
+          > .info {
+            width: 100%;
+            max-width: 300px;
+            margin: 0 auto;
+            background-color: white;
+            padding: 0 10px 0 10px;
+            > h3 {
+              font-family: $f300;
+              font-size: 1em;
+            }
+            > h2 {
+              font-family: $f700;
+              font-size: 1em;
+              color: #0096ff;
+              max-width: 200px;
+            }
+            > .price {
+              display: flex;
+              justify-content: space-between;
+              > div {
+                > p {
+                  font-family: $f300;
+                  font-size: 1em;
+                  text-decoration: line-through;
+                  color: #a4a4a4;
+                }
+                > h2 {
+                  font-family: $f700;
+                  font-size: 1.2em;
+                }
+                > .decoration {
+                  margin: 0 5px 0 0;
+                  height: 22px;
+                  width: 22px;
+                  min-height: 22px;
+                  min-width: 22px;
+                  border-radius: 50%;
+                  display: flex;
+                  justify-content: center;
+                  align-items: center;
+                  background: rgb(59,229,0);
+                  background: linear-gradient(to bottom,  rgba(59,229,0,1) 0%,rgba(37,172,0,1) 100%);
+                  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3be500', endColorstr='#25ac00',GradientType=0 );
+                  > i {
+                    color: white;
+                    font-size: 0.8em;
+                  }
+                }
+                > .text {
+                  font-family: $f300;
+                  font-size: 1em;
+                }
+              }
+              > .right{
+                display: flex;
+                align-items: flex-end;
+              }
+            }
+            > .buttons {
+              margin: 15px 0 15px 0;
+              display: flex;
+              flex-direction: column;
+              > button {
+                height: 50px;
+                min-height: 50px;
+                width: 100%;
+                border: none;
+                border-radius: 25px;
+                color: white;
+                font-family: $f700;
+                font-size: 1em;
+                text-transform: uppercase;
+                margin: 5px 0 5px 0;
+                transition: $transition;
+              }
+            }
+          }
+        }
+      }
+      > .seach-pagination {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 50px 0 50px 0;
+        > i {
+          font-size: 1em;
+          margin: 0 10px 0 10px;
+          cursor: pointer;
+          transition: $transition;
+          &:hover {
+            transform: scale(1.2);
+          }
+        }
+        > .number {
+          margin: 0 5px 0 5px;
+          font-family: $f300;
+          font-size: 1em;
+          cursor: pointer;
+          transition: $transition;
+          &:hover {
+            transform: scale(1.2);
+          }
+        }
+        > .active {
+          color: #00a3e5;
+          font-family: $f900;
+        }
+      }
+      > .search-story {
+        > .image-cover {
+          height: 330px;
+          width: 100%;
+          border-radius: 10px;
+          overflow: hidden;
+        }
+        > .text {
+          font-family: $f300;
+          font-size: 1em;
+          margin: 50px 0 0 0;
+          text-align: justify;
+          text-indent: 25px;
+          line-height: 20px;
+        }
+      }
+      > .search-accessories {
+        > h2 {
+          font-family: $f900;
+          font-size: 2em;
+          text-transform: uppercase;
+          text-align: center;
+          margin: 50px 0 50px 0;
+        }
+        > .cards-list {
+          display: flex;
+          justify-content: space-between;
+          > .card {
+            margin: 10px 0 0 0;
+            height: auto;
+            width: 100%;
+            max-width: 265px;
+            padding: 10px 0 10px 0;
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            transition: $transition;
+            border: 1px solid #dbdbdb;
+            border-radius: 5px;
+            z-index: 5;
+            background-color: white;
+            &:hover {
+              transform: scale(1.05);
+            }
+            &:hover > .additional {display: flex;}
+            > .image-contain {
+              position: relative;
+              height: 250px;
+              width: 100%;
+              background-color: white;
+              > .hover {
+                position: absolute;
+                top: 20px;
+                left: 0;
+                display: flex;
+                justify-content: space-between;
+                height: 35px;
+                width: 100%;
+                > .left {
+                  width: 70px;
+                  background: rgb(0,192,255);
+                  background: linear-gradient(to bottom,  rgba(0,192,255,1) 0%,rgba(0,127,197,1) 100%);
+                  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00c0ff', endColorstr='#007fc5',GradientType=0 );
+                  display: flex;
+                  align-items: center;
+                  justify-content: center;
+                  color: white;
+                  font-family: $f700;
+                  font-size: 1em;
+                  -webkit-clip-path: polygon(0% 0%, 100% 0, 90% 50%, 100% 100%, 0% 100%);
+                          clip-path: polygon(0% 0%, 100% 0, 90% 50%, 100% 100%, 0% 100%);
+                }
+                > .right {
+                  display: flex;
+                  justify-content: flex-end;
+                  padding: 0 10px 0 0;
+                  > .image-contain {
+                    height: 100%;
+                    width: 25px;
+                    margin: 0 5px 0 5px;
+                    cursor: pointer;
+                  }
+                }
+              }
+            }
+            > .info {
+              width: 100%;
+              max-width: 300px;
+              margin: 0 auto;
+              background-color: white;
+              padding: 0 10px 0 10px;
+              > h3 {
+                font-family: $f300;
+                font-size: 1em;
+              }
+              > h2 {
+                font-family: $f700;
+                font-size: 1em;
+                color: #0096ff;
+                max-width: 200px;
+              }
+              > .price {
+                display: flex;
+                justify-content: space-between;
+                > div {
+                  > p {
+                    font-family: $f300;
+                    font-size: 1em;
+                    text-decoration: line-through;
+                    color: #a4a4a4;
+                  }
+                  > h2 {
+                    font-family: $f700;
+                    font-size: 1.2em;
+                  }
+                  > .decoration {
+                    margin: 0 5px 0 0;
+                    height: 22px;
+                    width: 22px;
+                    min-height: 22px;
+                    min-width: 22px;
+                    border-radius: 50%;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    background: rgb(59,229,0);
+                    background: linear-gradient(to bottom,  rgba(59,229,0,1) 0%,rgba(37,172,0,1) 100%);
+                    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3be500', endColorstr='#25ac00',GradientType=0 );
+                    > i {
+                      color: white;
+                      font-size: 0.8em;
+                    }
+                  }
+                  > .text {
+                    font-family: $f300;
+                    font-size: 1em;
+                  }
+                }
+                > .right{
+                  display: flex;
+                  align-items: flex-end;
+                }
+              }
+              > .buttons {
+                margin: 15px 0 15px 0;
+                display: flex;
+                flex-direction: column;
+                > button {
+                  height: 50px;
+                  min-height: 50px;
+                  width: 100%;
+                  border-radius: 25px;
+                  font-family: $f700;
+                  font-size: 1em;
+                  text-transform: uppercase;
+                  margin: 5px 0 5px 0;
+                }
+              }
+            }
+          }
+        }
+      }
     }
   }
 }
