--- a/velomall/style/scss/_selection.scss
+++ b/velomall/style/scss/_selection.scss
@@ -309,11 +309,57 @@
         font-size: 1em;
         color: white;
       }
-      > .options {
-        > p {
-          font-family: $f100;
-          font-size: 1em;
-          color: white;
+      > .form-checkbox {
+        display: flex;
+        justify-content: center;;
+        align-items: center;
+        width: 100%;
+        margin: 10px 0 10px 0;
+        > input[type=checkbox]:checked ~.decoration > label {
+          background: rgb(0,192,255);
+          background: linear-gradient(to bottom,  rgba(0,192,255,1) 0%,rgba(0,127,197,1) 100%);
+          filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00c0ff', endColorstr='#007fc5',GradientType=0 );
+        }
+        > .decoration {
+          height: 15px;
+          min-height: 15px;
+          width: 15px;
+          min-width: 15px;
+          border-radius: 50%;
+          cursor: pointer;
+          border: 1px solid grey;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          margin: 0 10px 0 0;
+          > label {
+            display: flex;
+            height: 100%;
+            min-height: 100%;
+            width: 100%;
+            min-width: 100%;
+            border-radius: 50%;
+            border: 3px solid white;
+            background-color: white;
+            cursor: pointer;
+          }
+        }
+        > .text {
+          > p {
+            font-family: $f100;
+            font-size: 0.8em;
+            color: white;
+            > label {
+              cursor: pointer;
+            }
+          }
+          > a {
+            font-family: $f100;
+            font-size: 0.8em;
+            text-decoration: underline;
+            cursor: pointer;
+            color: white;
+          }
         }
       }
       > button {
