--- a/velomall/style/index.css
+++ b/velomall/style/index.css
@@ -6267,6 +6267,8 @@ button {
 }
 
 .green-gradient {
+  border: none;
+  color: white;
   background: #3be500;
   background: linear-gradient(to bottom, #3be500 0%, #25ac00 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#3be500", endColorstr="#25ac00",GradientType=0 );
@@ -6367,6 +6369,24 @@ button {
 .header > .header-top-content > div > .left > .upper > .info:hover > a {
   color: white;
 }
+.header > .header-top-content > div > .left > .upper > .info:hover > .icon-bank {
+  background-image: url("../image/icon/pig-white.svg");
+}
+.header > .header-top-content > div > .left > .upper > .info:hover > .icon-body {
+  background-image: url("../image/icon/body-white.svg");
+}
+.header > .header-top-content > div > .left > .upper > .info:hover > .icon-star {
+  background-image: url("../image/icon/star-white.svg");
+}
+.header > .header-top-content > div > .left > .upper > .info > .icon-bank {
+  background-image: url("../image/icon/pig.svg");
+}
+.header > .header-top-content > div > .left > .upper > .info > .icon-body {
+  background-image: url("../image/icon/body.svg");
+}
+.header > .header-top-content > div > .left > .upper > .info > .icon-star {
+  background-image: url("../image/icon/star.svg");
+}
 .header > .header-top-content > div > .right {
   height: 100%;
   width: 50%;
@@ -6410,6 +6430,21 @@ button {
 .header > .header-top-content > div > .right > .info > a:hover {
   text-decoration: underline;
 }
+.header > .header-top-content > div > .right > .info > .icon-email {
+  background-image: url("../image/icon/email.svg");
+  cursor: pointer;
+}
+.header > .header-top-content > div > .right > .info > .icon-heart {
+  background-image: url("../image/icon/heart.svg");
+  cursor: pointer;
+}
+.header > .header-top-content > div > .right > .info > .icon-heart:hover {
+  background-image: url("../image/icon/heart-fill.svg");
+}
+.header > .header-top-content > div > .right > .info > .icon-cart {
+  background-image: url("../image/icon/cart.svg");
+  cursor: pointer;
+}
 .header > .header-middle-content > .container {
   height: 140px;
 }
@@ -6443,6 +6478,9 @@ button {
   font-family: "Museo Sans Cyrl 300";
   font-size: 0.8em;
   margin: 0 0 0 10px;
+}
+.header > .header-middle-content > .container > .address > .icon-pointer {
+  background-image: url("../image/icon/pointer.svg");
 }
 .header > .header-middle-content > .container > .search > p {
   font-family: "Museo Sans Cyrl 100";
@@ -6561,12 +6599,51 @@ button {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#00c0ff", endColorstr="#007fc5",GradientType=0 );
   color: white;
 }
+.header > .header-bottom-nav > .container > div:hover > .icon-pump {
+  background-image: url("../image/icon/pump-white.svg");
+}
+.header > .header-bottom-nav > .container > div:hover > .icon-spare {
+  background-image: url("../image/icon/spare-white.svg");
+}
+.header > .header-bottom-nav > .container > div:hover > .icon-helmet {
+  background-image: url("../image/icon/helmet-white.svg");
+}
+.header > .header-bottom-nav > .container > div:hover > .icon-wrench {
+  background-image: url("../image/icon/wrench-white.svg");
+}
+.header > .header-bottom-nav > .container > div:hover > .icon-scooter {
+  background-image: url("../image/icon/scooter-white.svg");
+}
+.header > .header-bottom-nav > .container > div:hover > .icon-contacts {
+  background-image: url("../image/icon/contacts-white.svg");
+}
 .header > .header-bottom-nav > .container > div:hover > .header-bottom-nav-hover {
   display: flex;
 }
 .header > .header-bottom-nav > .container > div > div {
   height: 30px;
   width: 30px;
+}
+.header > .header-bottom-nav > .container > div > .icon-bike {
+  background-image: url("../image/icon/bike-white.svg");
+}
+.header > .header-bottom-nav > .container > div > .icon-pump {
+  background-image: url("../image/icon/pump.svg");
+}
+.header > .header-bottom-nav > .container > div > .icon-spare {
+  background-image: url("../image/icon/spare.svg");
+}
+.header > .header-bottom-nav > .container > div > .icon-helmet {
+  background-image: url("../image/icon/helmet.svg");
+}
+.header > .header-bottom-nav > .container > div > .icon-wrench {
+  background-image: url("../image/icon/wrench.svg");
+}
+.header > .header-bottom-nav > .container > div > .icon-scooter {
+  background-image: url("../image/icon/scooter.svg");
+}
+.header > .header-bottom-nav > .container > div > .icon-contacts {
+  background-image: url("../image/icon/contacts.svg");
 }
 .header > .header-bottom-nav > .container > div > p {
   font-family: "Museo Sans Cyrl 300";
@@ -6702,6 +6779,24 @@ button {
 }
 .header > .header-bottom-nav > .container > .active > p {
   font-family: "Museo Sans Cyrl 700";
+}
+.header > .header-bottom-nav > .container > .active > .icon-pump {
+  background-image: url("../image/icon/pump-white.svg");
+}
+.header > .header-bottom-nav > .container > .active > .icon-spare {
+  background-image: url("../image/icon/spare-white.svg");
+}
+.header > .header-bottom-nav > .container > .active > .icon-helmet {
+  background-image: url("../image/icon/helmet-white.svg");
+}
+.header > .header-bottom-nav > .container > .active > .icon-wrench {
+  background-image: url("../image/icon/wrench-white.svg");
+}
+.header > .header-bottom-nav > .container > .active > .icon-scooter {
+  background-image: url("../image/icon/scooter-white.svg");
+}
+.header > .header-bottom-nav > .container > .active > .icon-contacts {
+  background-image: url("../image/icon/contacts-white.svg");
 }
 
 .main {
@@ -6867,6 +6962,24 @@ button {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#00c0ff", endColorstr="#007fc5",GradientType=0 );
   color: white;
 }
+.main-nav > .container > a:hover > .icon-pump {
+  background-image: url("../image/icon/pump-white.svg");
+}
+.main-nav > .container > a:hover > .icon-spare {
+  background-image: url("../image/icon/spare-white.svg");
+}
+.main-nav > .container > a:hover > .icon-helmet {
+  background-image: url("../image/icon/helmet-white.svg");
+}
+.main-nav > .container > a:hover > .icon-wrench {
+  background-image: url("../image/icon/wrench-white.svg");
+}
+.main-nav > .container > a:hover > .icon-scooter {
+  background-image: url("../image/icon/scooter-white.svg");
+}
+.main-nav > .container > a:hover > .icon-contacts {
+  background-image: url("../image/icon/contacts-white.svg");
+}
 .main-nav > .container > a > div {
   height: 30px;
   width: 30px;
@@ -6875,6 +6988,27 @@ button {
   font-family: "Museo Sans Cyrl 300";
   font-size: 1em;
   margin: 0 0 0 10px;
+}
+.main-nav > .container > a > .icon-bike {
+  background-image: url("../image/icon/bike-white.svg");
+}
+.main-nav > .container > a > .icon-pump {
+  background-image: url("../image/icon/pump.svg");
+}
+.main-nav > .container > a > .icon-spare {
+  background-image: url("../image/icon/spare.svg");
+}
+.main-nav > .container > a > .icon-helmet {
+  background-image: url("../image/icon/helmet.svg");
+}
+.main-nav > .container > a > .icon-wrench {
+  background-image: url("../image/icon/wrench.svg");
+}
+.main-nav > .container > a > .icon-scooter {
+  background-image: url("../image/icon/scooter.svg");
+}
+.main-nav > .container > a > .icon-contacts {
+  background-image: url("../image/icon/contacts.svg");
 }
 .main-nav > .container > .active {
   background: #00c0ff;
@@ -6904,6 +7038,24 @@ button {
 .bicycles > .opportunity > .card > .info > p {
   font-family: "Museo Sans Cyrl 300";
   font-size: 1em;
+}
+.bicycles > .opportunity > .card > .icon-bike {
+  background-image: url("../image/icon/bike.svg");
+}
+.bicycles > .opportunity > .card > .icon-wrench {
+  background-image: url("../image/icon/wrench.svg");
+}
+.bicycles > .opportunity > .card > .icon-oil {
+  background-image: url("../image/icon/oil.svg");
+}
+.bicycles > .opportunity > .card > .icon-map {
+  background-image: url("../image/icon/map.svg");
+}
+.bicycles > .opportunity > .card > .icon-call-center {
+  background-image: url("../image/icon/call-center.svg");
+}
+.bicycles > .opportunity > .card > .icon-money {
+  background-image: url("../image/icon/money.svg");
 }
 .bicycles > .bicycles-title {
   width: 100%;
@@ -7012,21 +7164,12 @@ button {
 }
 .bicycles > .list > .card > .details {
   position: absolute;
-  left: 0;
-  bottom: 15px;
-  width: 100%;
+  right: 0;
+  top: 0;
+  width: 65%;
+  height: 100%;
   text-align: center;
   z-index: 3;
-}
-.bicycles > .list > .card > .details > a {
-  color: white;
-  font-family: "Museo Sans Cyrl 900";
-  font-size: 1em;
-  text-transform: uppercase;
-  transition: 0.3s;
-}
-.bicycles > .list > .card > .details > a:hover {
-  text-decoration: underline;
 }
 
 .brands {
@@ -7656,7 +7799,7 @@ button {
   height: auto;
   width: 100%;
   max-width: 350px;
-  padding: 10px 0 10px 0;
+  padding: 0 0 10px 0;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -7675,39 +7818,71 @@ button {
   width: 100%;
   background-color: white;
 }
-.best-price > .best-price-slider > .slider-content > .card > .image-contain > .hover {
+.best-price > .best-price-slider > .slider-content > .card > .image-contain > .sale {
+  height: 50px;
+  min-width: 50px;
+  background-color: none;
+  cursor: pointer;
   position: absolute;
-  top: 20px;
-  left: 0;
+  top: 0;
+  left: 5%;
   display: flex;
-  justify-content: space-between;
-  height: 35px;
-  width: 100%;
-}
-.best-price > .best-price-slider > .slider-content > .card > .image-contain > .hover > .left {
-  width: 70px;
-  background: #00c0ff;
-  background: linear-gradient(to bottom, #00c0ff 0%, #007fc5 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#00c0ff", endColorstr="#007fc5",GradientType=0 );
-  display: flex;
-  align-items: center;
   justify-content: center;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 50% 90%, 0 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 50% 90%, 0 100%);
+}
+.best-price > .best-price-slider > .slider-content > .card > .image-contain > .sale > div {
+  height: 95%;
+  width: calc(100% - 2px);
+  background-color: yellow;
   color: white;
   font-family: "Museo Sans Cyrl 700";
   font-size: 1em;
-  -webkit-clip-path: polygon(0% 0%, 100% 0, 90% 50%, 100% 100%, 0% 100%);
-  clip-path: polygon(0% 0%, 100% 0, 90% 50%, 100% 100%, 0% 100%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 50% 90%, 0 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 50% 90%, 0 100%);
 }
-.best-price > .best-price-slider > .slider-content > .card > .image-contain > .hover > .right {
+.best-price > .best-price-slider > .slider-content > .card > .image-contain > .right {
+  position: absolute;
+  top: 20px;
+  right: 0;
   display: flex;
   justify-content: flex-end;
   padding: 0 10px 0 0;
 }
-.best-price > .best-price-slider > .slider-content > .card > .image-contain > .hover > .right > .image-contain {
-  height: 100%;
+.best-price > .best-price-slider > .slider-content > .card > .image-contain > .right > .image-contain {
+  height: 25px;
+  min-height: 25px;
   width: 25px;
+  min-width: 25px;
   margin: 0 5px 0 5px;
   cursor: pointer;
+}
+.best-price > .best-price-slider > .slider-content > .card > .image-contain > .right > .icon-compare {
+  background-image: url("../image/icon/compare-grey.svg");
+}
+.best-price > .best-price-slider > .slider-content > .card > .image-contain > .right > .icon-compare:hover {
+  background-image: url("../image/icon/compare.svg");
+}
+.best-price > .best-price-slider > .slider-content > .card > .image-contain > .right > .icon-compare-active {
+  background-image: url("../image/icon/compare.svg");
+}
+.best-price > .best-price-slider > .slider-content > .card > .image-contain > .right > .icon-compare-active:hover {
+  background-image: url("../image/icon/compare.svg");
+}
+.best-price > .best-price-slider > .slider-content > .card > .image-contain > .right > .icon-heart {
+  background-image: url("../image/icon/heart-grey.svg");
+}
+.best-price > .best-price-slider > .slider-content > .card > .image-contain > .right > .icon-heart:hover {
+  background-image: url("../image/icon/heart-fill.svg");
+}
+.best-price > .best-price-slider > .slider-content > .card > .image-contain > .right > .icon-heart-active {
+  background-image: url("../image/icon/heart.svg");
+}
+.best-price > .best-price-slider > .slider-content > .card > .image-contain > .right > .icon-heart-active:hover {
+  background-image: url("../image/icon/heart-fill.svg");
 }
 .best-price > .best-price-slider > .slider-content > .card > .info {
   width: 100%;
@@ -7774,9 +7949,7 @@ button {
   height: 50px;
   min-height: 50px;
   width: 100%;
-  border: none;
   border-radius: 25px;
-  color: white;
   font-family: "Museo Sans Cyrl 700";
   font-size: 1em;
   text-transform: uppercase;
@@ -8727,7 +8900,6 @@ button {
   background-image: url("../image/contacts-bg.jpg");
   background-repeat: no-repeat;
   background-position: center;
-  background-size: cover;
 }
 .contacts > .contacts-title {
   width: 100%;
@@ -8822,6 +8994,15 @@ button {
 .contacts > .contacts-content > .text > div > .block > div > h2 {
   font-family: "Museo Sans Cyrl 900";
   font-size: 1em;
+}
+.contacts > .contacts-content > .text > div > .block > div > .icon-pointer {
+  background-image: url("../image/icon/pointer.svg");
+}
+.contacts > .contacts-content > .text > div > .block > div > .icon-phone-call {
+  background-image: url("../image/icon/phone-call.svg");
+}
+.contacts > .contacts-content > .text > div > .block > div > .icon-reload {
+  background-image: url("../image/icon/reload.svg");
 }
 .contacts > .contacts-content > .text > div > .block > p {
   font-family: "Museo Sans Cyrl 300";
@@ -8965,6 +9146,15 @@ button {
   min-height: 25px;
   min-width: 25px;
   margin: 0 15px 0 0;
+}
+.footer > .footer-content > .tel > .block > .icon-pointer {
+  background-image: url("../image/icon/pointer.svg");
+}
+.footer > .footer-content > .tel > .block > .icon-email {
+  background-image: url("../image/icon/email.svg");
+}
+.footer > .footer-content > .tel > .block > .icon-chat {
+  background-image: url("../image/icon/chat.svg");
 }
 .footer > .footer-content > .tel > .block > .text > h2 {
   font-family: "Museo Sans Cyrl 700";
