--- a/velomall/style/product.css
+++ b/velomall/style/product.css
@@ -6267,6 +6267,8 @@ button {
 }
 
 .green-gradient {
+  border: none;
+  color: white;
   background: #3be500;
   background: linear-gradient(to bottom, #3be500 0%, #25ac00 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#3be500", endColorstr="#25ac00",GradientType=0 );
@@ -6367,6 +6369,24 @@ button {
 .header > .header-top-content > div > .left > .upper > .info:hover > a {
   color: white;
 }
+.header > .header-top-content > div > .left > .upper > .info:hover > .icon-bank {
+  background-image: url("../image/icon/pig-white.svg");
+}
+.header > .header-top-content > div > .left > .upper > .info:hover > .icon-body {
+  background-image: url("../image/icon/body-white.svg");
+}
+.header > .header-top-content > div > .left > .upper > .info:hover > .icon-star {
+  background-image: url("../image/icon/star-white.svg");
+}
+.header > .header-top-content > div > .left > .upper > .info > .icon-bank {
+  background-image: url("../image/icon/pig.svg");
+}
+.header > .header-top-content > div > .left > .upper > .info > .icon-body {
+  background-image: url("../image/icon/body.svg");
+}
+.header > .header-top-content > div > .left > .upper > .info > .icon-star {
+  background-image: url("../image/icon/star.svg");
+}
 .header > .header-top-content > div > .right {
   height: 100%;
   width: 50%;
@@ -6410,6 +6430,21 @@ button {
 .header > .header-top-content > div > .right > .info > a:hover {
   text-decoration: underline;
 }
+.header > .header-top-content > div > .right > .info > .icon-email {
+  background-image: url("../image/icon/email.svg");
+  cursor: pointer;
+}
+.header > .header-top-content > div > .right > .info > .icon-heart {
+  background-image: url("../image/icon/heart.svg");
+  cursor: pointer;
+}
+.header > .header-top-content > div > .right > .info > .icon-heart:hover {
+  background-image: url("../image/icon/heart-fill.svg");
+}
+.header > .header-top-content > div > .right > .info > .icon-cart {
+  background-image: url("../image/icon/cart.svg");
+  cursor: pointer;
+}
 .header > .header-middle-content > .container {
   height: 140px;
 }
@@ -6443,6 +6478,9 @@ button {
   font-family: "Museo Sans Cyrl 300";
   font-size: 0.8em;
   margin: 0 0 0 10px;
+}
+.header > .header-middle-content > .container > .address > .icon-pointer {
+  background-image: url("../image/icon/pointer.svg");
 }
 .header > .header-middle-content > .container > .search > p {
   font-family: "Museo Sans Cyrl 100";
@@ -6561,12 +6599,51 @@ button {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#00c0ff", endColorstr="#007fc5",GradientType=0 );
   color: white;
 }
+.header > .header-bottom-nav > .container > div:hover > .icon-pump {
+  background-image: url("../image/icon/pump-white.svg");
+}
+.header > .header-bottom-nav > .container > div:hover > .icon-spare {
+  background-image: url("../image/icon/spare-white.svg");
+}
+.header > .header-bottom-nav > .container > div:hover > .icon-helmet {
+  background-image: url("../image/icon/helmet-white.svg");
+}
+.header > .header-bottom-nav > .container > div:hover > .icon-wrench {
+  background-image: url("../image/icon/wrench-white.svg");
+}
+.header > .header-bottom-nav > .container > div:hover > .icon-scooter {
+  background-image: url("../image/icon/scooter-white.svg");
+}
+.header > .header-bottom-nav > .container > div:hover > .icon-contacts {
+  background-image: url("../image/icon/contacts-white.svg");
+}
 .header > .header-bottom-nav > .container > div:hover > .header-bottom-nav-hover {
   display: flex;
 }
 .header > .header-bottom-nav > .container > div > div {
   height: 30px;
   width: 30px;
+}
+.header > .header-bottom-nav > .container > div > .icon-bike {
+  background-image: url("../image/icon/bike-white.svg");
+}
+.header > .header-bottom-nav > .container > div > .icon-pump {
+  background-image: url("../image/icon/pump.svg");
+}
+.header > .header-bottom-nav > .container > div > .icon-spare {
+  background-image: url("../image/icon/spare.svg");
+}
+.header > .header-bottom-nav > .container > div > .icon-helmet {
+  background-image: url("../image/icon/helmet.svg");
+}
+.header > .header-bottom-nav > .container > div > .icon-wrench {
+  background-image: url("../image/icon/wrench.svg");
+}
+.header > .header-bottom-nav > .container > div > .icon-scooter {
+  background-image: url("../image/icon/scooter.svg");
+}
+.header > .header-bottom-nav > .container > div > .icon-contacts {
+  background-image: url("../image/icon/contacts.svg");
 }
 .header > .header-bottom-nav > .container > div > p {
   font-family: "Museo Sans Cyrl 300";
@@ -6702,6 +6779,24 @@ button {
 }
 .header > .header-bottom-nav > .container > .active > p {
   font-family: "Museo Sans Cyrl 700";
+}
+.header > .header-bottom-nav > .container > .active > .icon-pump {
+  background-image: url("../image/icon/pump-white.svg");
+}
+.header > .header-bottom-nav > .container > .active > .icon-spare {
+  background-image: url("../image/icon/spare-white.svg");
+}
+.header > .header-bottom-nav > .container > .active > .icon-helmet {
+  background-image: url("../image/icon/helmet-white.svg");
+}
+.header > .header-bottom-nav > .container > .active > .icon-wrench {
+  background-image: url("../image/icon/wrench-white.svg");
+}
+.header > .header-bottom-nav > .container > .active > .icon-scooter {
+  background-image: url("../image/icon/scooter-white.svg");
+}
+.header > .header-bottom-nav > .container > .active > .icon-contacts {
+  background-image: url("../image/icon/contacts-white.svg");
 }
 
 .main {
@@ -7359,7 +7454,6 @@ button {
   background-image: url("../image/contacts-bg.jpg");
   background-repeat: no-repeat;
   background-position: center;
-  background-size: cover;
 }
 .contacts > .contacts-title {
   width: 100%;
@@ -7454,6 +7548,15 @@ button {
 .contacts > .contacts-content > .text > div > .block > div > h2 {
   font-family: "Museo Sans Cyrl 900";
   font-size: 1em;
+}
+.contacts > .contacts-content > .text > div > .block > div > .icon-pointer {
+  background-image: url("../image/icon/pointer.svg");
+}
+.contacts > .contacts-content > .text > div > .block > div > .icon-phone-call {
+  background-image: url("../image/icon/phone-call.svg");
+}
+.contacts > .contacts-content > .text > div > .block > div > .icon-reload {
+  background-image: url("../image/icon/reload.svg");
 }
 .contacts > .contacts-content > .text > div > .block > p {
   font-family: "Museo Sans Cyrl 300";
@@ -7597,6 +7700,15 @@ button {
   min-height: 25px;
   min-width: 25px;
   margin: 0 15px 0 0;
+}
+.footer > .footer-content > .tel > .block > .icon-pointer {
+  background-image: url("../image/icon/pointer.svg");
+}
+.footer > .footer-content > .tel > .block > .icon-email {
+  background-image: url("../image/icon/email.svg");
+}
+.footer > .footer-content > .tel > .block > .icon-chat {
+  background-image: url("../image/icon/chat.svg");
 }
 .footer > .footer-content > .tel > .block > .text > h2 {
   font-family: "Museo Sans Cyrl 700";
