--- a/velomall/style/scss/_basic.scss
+++ b/velomall/style/scss/_basic.scss
@@ -126,6 +126,8 @@ display: none;
   }
 }
 .green-gradient {
+  border: none;
+  color: white;
   background: rgb(59,229,0);
   background: linear-gradient(to bottom,  rgba(59,229,0,1) 0%,rgba(37,172,0,1) 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3be500', endColorstr='#25ac00',GradientType=0 );
