--- a/velomall/style/scss/_products.scss
+++ b/velomall/style/scss/_products.scss
@@ -1,40 +1,34 @@
 .products {
   background-color: white;
-  > .products-title {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    > .title {
-      display: flex;
-      justify-content: flex-start;
-      align-items: center;
-      width: 100%;
-      max-width: 255px;
-      > div {
-        height: 30px;
-        width: 30px;
-        margin: 0 10px 0 0;
-      }
-      > h1 {
-        font-family: $f100;
-        font-size: 2em;
-      }
-    }
-    > .bunner {
-      height: 100%;
-      width: 100%;
-      max-width: 825px;
-      border-radius: 5px;
-      overflow: hidden;
-      display: flex;
-    }
-  }
   > .products-filter {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
     margin: 25px auto 0 auto;
     > .products-search {
+      > .title {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        width: 100%;
+        max-width: 255px;
+        margin: 0 0 20px 0;
+        > div {
+          height: 30px;
+          width: 30px;
+          margin: 0 10px 0 0;
+        }
+        > h1 {
+          font-family: $f100;
+          font-size: 1.5em;
+        }
+        > .icon-bike {
+          background-image: url('../image/icon/bike.svg');
+        }
+        > .icon-spare {
+          background-image: url('../image/icon/spare.svg');
+        }
+      }
       display: flex;
       justify-content: flex-start;
       align-items: center;
@@ -106,6 +100,7 @@
           justify-content: center;
           align-items: center;
           position: relative;
+          margin: 0 0 25px 0;
           > .min {
             height: 15px;
             min-height: 15px;
@@ -191,6 +186,7 @@
                   background: rgb(0,192,255);
                   background: linear-gradient(to bottom,  rgba(0,192,255,1) 0%,rgba(0,127,197,1) 100%);
                   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00c0ff', endColorstr='#007fc5',GradientType=0 );
+                  box-shadow: inset 0 0 0px 1px rgb(0,192,255);
                 }
                 > .text {
                   padding: 0 0 0 20px;
@@ -213,8 +209,9 @@
                     border: 6px solid white;
                     background-color: white;
                     cursor: pointer;
+                    box-shadow: inset 0 0 0px 1px grey;
                     &:hover {
-                      box-shadow: inset 0 0 1px 1px grey;
+                      box-shadow: inset 0 0 0px 1px rgb(0,192,255);
                     }
                   }
                 }
@@ -273,6 +270,61 @@
                   transition: $transition;
                 }
               }
+              > .image-contain {
+                height: 25px;
+                min-height: 25px;
+                width: 25px;
+                min-width: 25px;
+                margin: 0 0 0 15px;
+              }
+              > .icon-camera {
+                background-image: url('../image/icon/camera.svg');
+              }
+              > .icon-tyre {
+                background-image: url('../image/icon/tyre.svg');
+              }
+              > .icon-fork {
+                background-image: url('../image/icon/fork.svg');
+              }
+              > .icon-bush {
+                background-image: url('../image/icon/bush.svg');
+              }
+              > .icon-wheel-removal {
+                background-image: url('../image/icon/wheel-removal.svg');
+              }
+              > .icon-grips {
+                background-image: url('../image/icon/grips.svg');
+              }
+              > .icon-cassettes-ratchets {
+                background-image: url('../image/icon/cassettes-ratchets.svg');
+              }
+              > .icon-bike-wheel {
+                background-image: url('../image/icon/bike-wheel.svg');
+              }
+              > .icon-manettes-shifters {
+                background-image: url('../image/icon/manettes-shifters.svg');
+              }
+              > .icon-pedals {
+                background-image: url('../image/icon/pedals.svg');
+              }
+              > .icon-switches {
+                background-image: url('../image/icon/switches.svg');
+              }
+              > .icon-base {
+                background-image: url('../image/icon/base.svg');
+              }
+              > .icon-handlebar {
+                background-image: url('../image/icon/handlebar.svg');
+              }
+              > .icon-seat {
+                background-image: url('../image/icon/seat.svg');
+              }
+              > .icon-spokes {
+                background-image: url('../image/icon/spokes.svg');
+              }
+              > .icon-brakes {
+                background-image: url('../image/icon/brakes.svg');
+              }
             }
           }
         }
@@ -287,6 +339,7 @@
             background: rgb(0,192,255);
             background: linear-gradient(to bottom,  rgba(0,192,255,1) 0%,rgba(0,127,197,1) 100%);
             filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00c0ff', endColorstr='#007fc5',GradientType=0 );
+            box-shadow: inset 0 0 0px 1px rgb(0,192,255);
           }
           > .text {
             padding: 0 0 0 20px;
@@ -311,8 +364,9 @@
               border: 6px solid white;
               background-color: white;
               cursor: pointer;
+              box-shadow: inset 0 0 0px 1px grey;
               &:hover {
-                box-shadow: inset 0 0 1px 1px grey;
+                box-shadow: inset 0 0 0px 1px rgb(0,192,255);
               }
             }
           }
@@ -486,6 +540,14 @@
     > .products-content {
       width: 100%;
       max-width: 825px;
+      > .bunner {
+        height: 100%;
+        width: 100%;
+        max-width: 825px;
+        border-radius: 5px;
+        overflow: hidden;
+        display: flex;
+      }
       > .search-tags {
         display: flex;
         justify-content: flex-start;
@@ -593,6 +655,7 @@
             background: rgb(0,192,255);
             background: linear-gradient(to bottom,  rgba(0,192,255,1) 0%,rgba(0,127,197,1) 100%);
             filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00c0ff', endColorstr='#007fc5',GradientType=0 );
+            box-shadow: inset 0 0 0px 1px rgb(0,192,255);
           }
           > .text {
             padding: 0 0 0 20px;
@@ -615,8 +678,9 @@
               border: 6px solid white;
               background-color: white;
               cursor: pointer;
+              box-shadow: inset 0 0 0px 1px grey;
               &:hover {
-                box-shadow: inset 0 0 1px 1px grey;
+                box-shadow: inset 0 0 0px 1px rgb(0,192,255);
               }
             }
           }
@@ -631,7 +695,7 @@
           height: auto;
           width: 100%;
           max-width: 265px;
-          padding: 10px 0 10px 0;
+          padding: 0 0 10px 0;
           position: relative;
           display: flex;
           flex-direction: column;
@@ -649,37 +713,69 @@
             height: 250px;
             width: 100%;
             background-color: white;
-            > .hover {
+            > .sale {
+              height: 50px;
+              min-width: 50px;
+              background-color: none; //rgba(100,100,100,0.5);
+              cursor: pointer;
               position: absolute;
-              top: 20px;
-              left: 0;
+              top: 0;
+              left: 5%;
               display: flex;
-              justify-content: space-between;
-              height: 35px;
-              width: 100%;
-              > .left {
-                width: 70px;
-                background: rgb(0,192,255);
-                background: linear-gradient(to bottom,  rgba(0,192,255,1) 0%,rgba(0,127,197,1) 100%);
-                filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00c0ff', endColorstr='#007fc5',GradientType=0 );
-                display: flex;
-                align-items: center;
-                justify-content: center;
+              justify-content: center;
+              -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 50% 90%, 0 100%);
+                      clip-path: polygon(0 0, 100% 0, 100% 100%, 50% 90%, 0 100%);
+              > div {
+                height: 95%;
+                width: #{calc(100% - 2px)};
+                background-color: yellow;
                 color: white;
                 font-family: $f700;
                 font-size: 1em;
-                -webkit-clip-path: polygon(0% 0%, 100% 0, 90% 50%, 100% 100%, 0% 100%);
-                        clip-path: polygon(0% 0%, 100% 0, 90% 50%, 100% 100%, 0% 100%);
-              }
-              > .right {
                 display: flex;
-                justify-content: flex-end;
-                padding: 0 10px 0 0;
-                > .image-contain {
-                  height: 100%;
-                  width: 25px;
-                  margin: 0 5px 0 5px;
-                  cursor: pointer;
+                justify-content: center;
+                align-items: center;
+                -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 50% 90%, 0 100%);
+                        clip-path: polygon(0 0, 100% 0, 100% 100%, 50% 90%, 0 100%);
+              }
+            }
+            > .right {
+              position: absolute;
+              top: 20px;
+              right: 0;
+              display: flex;
+              justify-content: flex-end;
+              padding: 0 10px 0 0;
+              > .image-contain {
+                height: 25px;
+                min-height: 25px;
+                width: 25px;
+                min-width: 25px;
+                margin: 0 5px 0 5px;
+                cursor: pointer;
+              }
+              > .icon-compare {
+                background-image: url('../image/icon/compare-grey.svg');
+                &:hover {
+                  background-image: url('../image/icon/compare.svg');
+                }
+              }
+              > .icon-compare-active {
+                background-image: url('../image/icon/compare.svg');
+                &:hover {
+                  background-image: url('../image/icon/compare.svg');
+                }
+              }
+              > .icon-heart {
+                background-image: url('../image/icon/heart-grey.svg');
+                &:hover {
+                  background-image: url('../image/icon/heart-fill.svg');
+                }
+              }
+              > .icon-heart-active {
+                background-image: url('../image/icon/heart.svg');
+                &:hover {
+                  background-image: url('../image/icon/heart-fill.svg');
                 }
               }
             }
@@ -750,9 +846,7 @@
                 height: 50px;
                 min-height: 50px;
                 width: 100%;
-                border: none;
                 border-radius: 25px;
-                color: white;
                 font-family: $f700;
                 font-size: 1em;
                 text-transform: uppercase;
@@ -824,7 +918,7 @@
             height: auto;
             width: 100%;
             max-width: 265px;
-            padding: 10px 0 10px 0;
+            padding: 0 0 10px 0;
             position: relative;
             display: flex;
             flex-direction: column;
@@ -842,37 +936,69 @@
               height: 250px;
               width: 100%;
               background-color: white;
-              > .hover {
+              > .sale {
+                height: 50px;
+                min-width: 50px;
+                background-color: rgba(100,100,100,0.5);
+                cursor: pointer;
                 position: absolute;
-                top: 20px;
-                left: 0;
+                top: 0;
+                left: 5%;
                 display: flex;
-                justify-content: space-between;
-                height: 35px;
-                width: 100%;
-                > .left {
-                  width: 70px;
-                  background: rgb(0,192,255);
-                  background: linear-gradient(to bottom,  rgba(0,192,255,1) 0%,rgba(0,127,197,1) 100%);
-                  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00c0ff', endColorstr='#007fc5',GradientType=0 );
-                  display: flex;
-                  align-items: center;
-                  justify-content: center;
+                justify-content: center;
+                -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 50% 90%, 0 100%);
+                        clip-path: polygon(0 0, 100% 0, 100% 100%, 50% 90%, 0 100%);
+                > div {
+                  height: 95%;
+                  width: #{calc(100% - 2px)};
+                  background-color: yellow;
                   color: white;
                   font-family: $f700;
                   font-size: 1em;
-                  -webkit-clip-path: polygon(0% 0%, 100% 0, 90% 50%, 100% 100%, 0% 100%);
-                          clip-path: polygon(0% 0%, 100% 0, 90% 50%, 100% 100%, 0% 100%);
-                }
-                > .right {
                   display: flex;
-                  justify-content: flex-end;
-                  padding: 0 10px 0 0;
-                  > .image-contain {
-                    height: 100%;
-                    width: 25px;
-                    margin: 0 5px 0 5px;
-                    cursor: pointer;
+                  justify-content: center;
+                  align-items: center;
+                  -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 50% 90%, 0 100%);
+                          clip-path: polygon(0 0, 100% 0, 100% 100%, 50% 90%, 0 100%);
+                }
+              }
+              > .right {
+                position: absolute;
+                top: 20px;
+                right: 0;
+                display: flex;
+                justify-content: flex-end;
+                padding: 0 10px 0 0;
+                > .image-contain {
+                  height: 25px;
+                  min-height: 25px;
+                  width: 25px;
+                  min-width: 25px;
+                  margin: 0 5px 0 5px;
+                  cursor: pointer;
+                }
+                > .icon-compare {
+                  background-image: url('../image/icon/compare-grey.svg');
+                  &:hover {
+                    background-image: url('../image/icon/compare.svg');
+                  }
+                }
+                > .icon-compare-active {
+                  background-image: url('../image/icon/compare.svg');
+                  &:hover {
+                    background-image: url('../image/icon/compare.svg');
+                  }
+                }
+                > .icon-heart {
+                  background-image: url('../image/icon/heart-grey.svg');
+                  &:hover {
+                    background-image: url('../image/icon/heart-fill.svg');
+                  }
+                }
+                > .icon-heart-active {
+                  background-image: url('../image/icon/heart.svg');
+                  &:hover {
+                    background-image: url('../image/icon/heart-fill.svg');
                   }
                 }
               }
